crates/cribo/tests/snapshots/bundled_code@importlib_deduplication.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_deduplication/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n):
        return object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = globals()[self._entry[1]]
        if module is not None:
            if getattr(module, '_cribo_machinery_loaded', False):
                saved = type(self)._pristine.get(id(module))
                fresh = _cribo.types.SimpleNamespace()
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                return fresh
            return module
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        pristine = type(self)._pristine
        key = id(module)
        if getattr(module, '_cribo_machinery_loaded', False):
            saved = pristine.get(key)
            if saved is not None:
                module.__dict__.clear()
                module.__dict__.update(saved)
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        if key not in pristine:
            pristine[key] = dict(state)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__dict__.clear()
            module.__dict__.update(state)
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder.register('package.submodule', '_cribo_init___cribo_75ebb7_package_submodule', 'package_submodule', False)
_cribo_finder_local.register('package', '_cribo_init___cribo_20ca72_package', 'package', True)
_cribo_finder_local.register('mymodule', '_cribo_init___cribo_26ef78_mymodule', 'mymodule', False)
mymodule = _cribo.types.SimpleNamespace(__name__='mymodule', __initializing__=False, __initialized__=False)
_cribo_finder.bind('mymodule', mymodule)
def _cribo_init___cribo_26ef78_mymodule(_cribo_self):
    if getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = ''
    _cribo_self.__doc__ = None
    print("mymodule.py is being executed!")
    counter = 1
    _cribo_self.counter = counter
    test_value = "Original"
    _cribo_self.test_value = test_value
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
mymodule.__init__ = _cribo_init___cribo_26ef78_mymodule
package = _cribo.types.SimpleNamespace(__name__='package', __initializing__=False, __initialized__=False, __path__=[])
_cribo_finder.bind('package', package)
def _cribo_init___cribo_20ca72_package(_cribo_self):
    if getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'package'
    _cribo_self.__doc__ = None
    print("package/__init__.py is being executed!")
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
package.__init__ = _cribo_init___cribo_20ca72_package
package_submodule = _cribo.types.SimpleNamespace(__name__='package.submodule', __initializing__=False, __initialized__=False)
_cribo_finder.bind('package.submodule', package_submodule)
def _cribo_init___cribo_75ebb7_package_submodule(_cribo_self):
    if getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'package'
    _cribo_self.__doc__ = None
    print("package/submodule.py is being executed!")
    sub_counter = 10
    _cribo_self.sub_counter = sub_counter
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
package_submodule.__init__ = _cribo_init___cribo_75ebb7_package_submodule
package.submodule = package_submodule
"""Test how importlib.import_module handles sys.modules and deduplication"""
sys = _cribo.sys
importlib = _cribo.importlib
print("=== Testing importlib.import_module deduplication ===\n")
mymodule = _cribo_init___cribo_26ef78_mymodule(mymodule)
mymodule2 = _cribo_init___cribo_26ef78_mymodule(mymodule)
print(f"   Are they the same object? {mymodule is mymodule2}")
__cribo_init_result = _cribo_init___cribo_20ca72_package(package)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(package, attr, getattr(__cribo_init_result, attr))
package.submodule = _cribo_init___cribo_75ebb7_package_submodule(package_submodule)
submodule = package.submodule
submodule2 = _cribo_init___cribo_75ebb7_package_submodule(package_submodule)
print(f"   Are they the same object? {submodule is submodule2}")
submodule3 = _cribo_init___cribo_75ebb7_package_submodule(package_submodule)
print(f"   Are they the same object? {submodule is submodule3}")
print("\n=== Testing modification propagation ===")
mymodule.test_value = "Modified!"
print(f"Set mymodule.test_value = 'Modified!'")
print(f"mymodule2.test_value = {mymodule2.test_value}")
mymodule_new = _cribo_init___cribo_26ef78_mymodule(mymodule)
print(f"After reimport mymodule_new.counter = {mymodule_new.counter}")
print(f"Are they the same object? {mymodule is mymodule_new}")
print(f"Original mymodule still has counter = {mymodule.counter}")
