crates/cribo/tests/snapshots/bundled_code@importlib_lambda_shadow.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_lambda_shadow/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

"""Lambda parameters shadow enclosing import aliases, exactly like Python.\n\n`lambda importlib: importlib.import_module(\"untouched_helper\")` dispatches to\nthe ARGUMENT's import_module at runtime; bundling must neither rewrite the\ncall nor bundle its apparent target.\n"""
import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
importlib = _cribo.importlib
class Fake:

    @staticmethod
    def import_module(name):
        return f"fake load of {name}"
load = lambda importlib: importlib.import_module("untouched_helper")
print("lambda:", load(Fake))
print("comprehension:", [importlib.upper() for importlib in ("a", "b")])
